[package]
name = "hook-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
arrayref = "0.3.7"
solana-program = ">=1.17.17,<=2"
spl-tlv-account-resolution = "0.5.2"
spl-token-2022 = {version = "2.0.1", features = ["no-entrypoint"]}
spl-transfer-hook-interface = "0.5.1"
spl-type-length-value = "0.3.1"

[dev-dependencies]
solana-program-test = ">=1.17.17,<=2"
solana-sdk = ">=1.17.17,<=2"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
